feat(api): support skin expiry grants
